added routing dependency of government listing page

--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -56,6 +56,7 @@
    <script src="resources/modules/taskList/js/controllers.js"></script>
    <script src="resources/modules/profile/js/settings/controllers.js"></script>
    <script src="resources/modules/profile/js/changePassword/controllers.js"></script>
+   <script src="resources/modules/dairyListing/js/controllers.js"></script>
    <!-- Bootstrap core JavaScript-->
     <script src="resources/js/bootstrap.bundle.min.js"></script>
 
